Camel 20247 rework dynamic router component (#120)
* CAMEL-20247: Updated dynamic router spring boot example for component redesign.

* CAMEL-20247: Updated spring boot example for the Dynamic Router EIP Component to reflect component rework and for better demonstration use cases.